--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="div-titulo">
         <h1>CONTROL EMPLEADOS </h1>
 
-        
+
     </div>
     <div class="contenedor">
 
@@ -35,6 +35,6 @@
     </div>
 
     <script src="./app.js"></script>
-    <footer>Todos los Derechos Reservados Junio 2023</footer>
+    <footer>Datos Exclusivamente Reservados de la Empresa 2023</footer>
 </body>
 </html>
