--- a/index.html
+++ b/index.html
@@ -6,35 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+    <section id="inicio">
+        <header>
+            <div id="logo">
+                <h2 class="nombre-compañia">AB</h2>
+            </div>
+            <nav>
+                <a href="#inicio" class="nav-link">INICIO</a>
+                <a href="#" class="nav-link">CONTACTO</a>
+            </nav>
+        </header>
+    </section>
+
     <div class="div-titulo">
         <h1>CONTROL EMPLEADOS </h1>
-
-
     </div>
     <div class="contenedor">
-
         <div class="div-formulario">
             <h2>Formulario</h2>
-
             <form action="#" id="formulario">
                 <input type="text" id="nombre" placeholder="Ingresa un nombre">
                 <input type="text" id="puesto" placeholder="Ingresa el puesto">
                 <button type="submit" id="btnAgregar">Agregar</button>
             </form>
         </div>
-
         <div class="div-listado">
             <h2>Listado Empleados</h2>
-            <div class="div-empleados">
-                
-            </div>
+            <div class="div-empleados"></div>
         </div>
-
     </div>
-
+    <!-- seccion footer -->
+    <footer>
+        <p>Todos los derechos reservados -2023</p>
+        <div class="redes">
+            <a href="https://github.com/alexandrabuitrago"><i class="fa-brands fa-github"></i></a> 
+            <a href="https://www.linkedin.com/in/alexandra-buitrago-976957263/"><i class="fa-brands fa-linkedin"></i></a> 
+            <a href="https://twitter.com/Alexandra_B0605"><i class="fa-brands fa-twitter"></i></a> 
+        </div>
+    </footer>
     <script src="./app.js"></script>
-    <footer>Datos Exclusivamente Reservados de la Empresa 2023</footer>
 </body>
 </html>
